feat(rental): align DI lifetime and add movie & customer features • Change RentalFeatures DI lifetime to scoped to match MovieRentalDbContext registered via AddDbContext. • Register IRentalFeatures, IMovieFeatures, and ICostumerFeatures as scoped services in Program.cs. • Add MovieFeatures and CostumerFeatures implementations and ensure the database is created on startup (EnsureCreated()). • No API contract changes; this fixes DI lifetime mismatch and prepares movie/customer feature implementations.

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,7 @@ CodeCoverage/
 *.VisualState.xml
 TestResult.xml
 nunit-*.xml
+/.vs/MovieRental/CopilotIndices/18.0.981.45449
+/.vs/MovieRental/FileContentIndex
+/.vs/MovieRental
+/MovieRental/Properties
